syntax = "proto2";

message InjsINJ1001U01ActorListRequest {
}

message InjsINJ1001U01ActorListResponse {
	repeated InjsINJ1001U01ActorListItemInfo actor_list_item = 1;
}

message InjsINJ1001U01DetailListRequest {
	optional string bunho = 1;
	optional string gwa = 2;
	optional string doctor = 3;
	optional string reser_date = 4;
	optional string acting_date = 5;
	optional string acting_flag = 6;
}

message InjsINJ1001U01DetailListResponse {
	repeated InjsINJ1001U01DetailListItemInfo detail_list_item = 1;
}

message InjsINJ1001U01MasterListRequest {
	optional string acting_flag = 1;
	optional string reser_date = 2;
	optional string gwa = 3;
}

message InjsINJ1001U01MasterListResponse {
	repeated InjsINJ1001U01MasterListItemInfo master_list_item = 1;
}

message InjsINJ1001U01AllergyListRequest {
	optional string bunho = 1;
	optional string query_date = 2;
}

message InjsINJ1001U01AllergyListResponse {
	repeated DataStringListItemInfo allergy_info = 1;
}

message InjsINJ1001U01InfectionListRequest{
	optional string bunho = 1;
	optional string query_date = 2;
}

message InjsINJ1001U01InfectionListResponse{
	repeated InjsINJ1001U01InfectionListItemInfo infection_list_item = 1;
}

message InjsINJ1001U01ScheduleRequest {
	optional string bunho = 1;
	optional string order_date = 2;
	optional string post_order_yn = 3;
	optional string pre_order_yn = 4;
	optional string reser_date = 5;
	optional string acting_flag = 6;
}

message InjsINJ1001U01ScheduleResponse {
	repeated InjsINJ1001U01ScheduleItemInfo schedule_item = 1;
}

message InjsINJ1001U01DiseaseListRequest {
	optional string bunho = 1;
	optional string gwa = 2;
	optional string reser_date = 3;
}

message InjsINJ1001U01DiseaseListResponse {
	repeated InjsINJ1001U01DiseaseListItemInfo disease_list_item = 1;
}

message InjsINJ1001U01LabelNewListRequest {
	optional string mix_group = 1;
	optional string bunho = 2;
	optional string gwa = 3;
	optional string doctor = 4;
	optional string jubsu_date = 5;
	optional string group_ser = 6;
	optional string fkinj1001 = 7;
}

message InjsINJ1001U01LabelNewListResponse {
	repeated InjsINJ1001U01LabelNewListItemInfo label_new_list_item = 1;
}

message InjsINJ1001U01ReserDateListRequest {
	optional string bunho = 1;
	optional string acting_flag = 2;
	optional string reser_date = 3;
}

message InjsINJ1001U01ReserDateListResponse {
	repeated string reser_date = 1;
}

message InjsINJ1001U01TempListRequest {
	optional string jubsu_date = 1;
	optional string bunho = 2;
	optional string doctor = 3;
	optional string reser_date = 4;
}

message InjsINJ1001U01TempListResponse {
	repeated InjsINJ1001U01TempListItemInfo temp_list_item = 1;
}

message INJ0102ComboListRequest {
	optional string code_type = 1;
}

message NUR0102ComboListSortKeyRequest {
	optional string code_type = 1;
}

message InjsINJ1001U01CommentListRequest {
	optional string bunho = 1;
	optional string commt_gubun = 2;
}

message InjsINJ1001U01CommentListResponse {
	repeated string comment_list = 1;
}

message InjsINJ1001U01CplOrderStatusRequest {
	optional string gubun = 1;
	optional string bunho = 2;
	optional string date = 3;
	optional string jundal_part = 4;
}

message InjsINJ1001U01CplOrderStatusResponse {
	optional string result = 1;
}

message InjsINJ1001U01PrintNameListRequest {
	optional string ip_addr = 1;
}

message InjsINJ1001U01PrintNameListResponse {
	repeated string print_name_list = 1;
}

message InjsINJ1001U01ChkbStateRequest {
	optional string reser_date = 1;
	optional string acting_flag = 2;
	optional string bunho = 3;
	optional string doctor = 4;
}

message InjsINJ1001U01ChkbStateResponse {
	optional string result = 1;
}

message InjsINJ1001U01SettingPrintRequest {
	optional string user_id = 1;
	optional string b_print_name = 2;
	optional string ip_addr = 3;
}

message InjsINJ1001U01SettingPrintResponse {
	optional bool result = 1;
}

message INJ0102CodeNameListRequest {
	optional string code_type = 1;
	optional string code = 2;
}

message INJ0102CodeNameListResponse {
	repeated string code_name_list = 1;
}

message InjsINJ1001U01OrderDateListRequest {
	optional string pkinj1002 = 1;
}

message InjsINJ1001U01OrderDateListResponse {
	repeated string order_date = 1;
}

message InjsINJ1001U01UpdateRequest {
	optional string acting_flag = 1;
	optional string acting_date = 2;
	optional string tonggye_code = 3;
	optional string mix_group = 4;
	optional string jujongja = 5;
	optional string upd_id = 6;
	optional string silsi_remark = 7;
	optional string pkinj1002 = 8;
}

message INJ1001U01GrdSangRequest {
	optional string hosp_code = 1;
	optional string bunho = 2;
	optional string gwa = 3;
	optional string reser_date = 4;
}

message INJ1001U01GrdSangResponse {
	repeated INJ1001U01GrdSangItemInfo schedule_item = 1;
}

message INJ1001U01GroupedRequest {
	optional string bunho = 1;
	optional string order_date = 2;
	optional string post_order_yn = 3;
	optional string pre_order_yn = 4;
	optional string reser_date = 5;
	optional string acting_flag = 6;
	optional string gwa = 7;
	optional string doctor = 8;
	optional string acting_date = 9;
	optional string hosp_code = 10;
 }

message INJ1001U01GroupedResponse {
	repeated InjsINJ1001U01ScheduleItemInfo schedule_item = 1;
	repeated InjsINJ1001U01DetailListItemInfo detail_list_item = 2;
	repeated INJ1001U01GrdSangItemInfo grd_sang_item = 3;
}

message InjsINJ1001U01ScheduleRequest {
	optional string bunho = 1;
	optional string order_date = 2;
	optional string post_order_yn = 3;
	optional string pre_order_yn = 4;
	optional string reser_date = 5;
	optional string acting_flag = 6;
 }
 
 message InjsINJ1001U01ScheduleResponse {
	repeated InjsINJ1001U01ScheduleItemInfo schedule_item = 1;
 }

 message InjsINJ1001U01DetailListRequest {
	optional string bunho = 1;
	optional string gwa = 2;
	optional string doctor = 3;
	optional string reser_date = 4;
	optional string acting_date = 5;
	optional string acting_flag = 6;
 }
 
 message InjsINJ1001U01DetailListResponse {
	repeated InjsINJ1001U01DetailListItemInfo detail_list_item = 1;
 }

 message INJ1001U01LayCommonRequest {
	optional string user_id = 1;
	optional string hosp_code = 2;
}
 
message INJ1001U01LayCommonResponse {
	required string user_nm = 1;
}
 
message INJ1001FormJusaBedLayPatientListRequest {
	optional string hosp_code = 1;
}
 
message INJ1001FormJusaBedLayPatientListResponse {
	repeated INJ1001FormJusaBedLayPatientItemInfo lay_patient_item = 1;
}
 
message INJ1001U01FormJusaBedLayHosilListRequest {
	optional string hosp_code = 1;
}
 
message INJ1001U01FormJusaBedLayHosilListResponse {
	repeated INJ1001U01FormJusaBedLayHosilItemInfo lay_patient_item = 1;
}


message INJ1001U01FormJusaBedLayPatientRequest {
	optional string code_name = 1;
	optional string hosp_code = 2;
}
 
message INJ1001U01FormJusaBedLayPatientResponse {
	repeated string code_name = 1;
}
 
message INJ1001U01GrdOCS1003Request {
	optional string hosp_code = 1;
	optional string language = 2
	optional string bunho = 3;
	optional string start_date = 4;
	optional string end_date = 5;
}
 
message INJ1001U01GrdOCS1003Response {
	repeated INJ1001U01GrdOCS1003ItemInfo grd_ocs1003_item = 1;
}
 
message INJ1001U01CboTimeRequest {
}
 
message INJ1001U01CboTimeResponse {
	repeated ComboListItemInfo grd_ocs1003_item = 1;
}

message INJ1001U01MlayConstantInfoRequest {
 }
 
message INJ1001U01MlayConstantInfoResponse {
	repeated ComboListItemInfo item = 1;
 }

message INJ1001U01Grouped2Request {
	optional string bunho = 1;
	optional string query_date = 2;
	optional string order_date = 3;
	optional string post_order_yn = 4;
	optional string pre_order_yn = 5;
	optional string reser_date = 6;
	optional string acting_flag = 7;
	optional string gwa = 8;
	optional string doctor = 9;
	optional string acting_date = 10;
	optional string commt_gubun = 11;
 }

message INJ1001U01Grouped2Response {
	repeated InjsINJ1001U01ScheduleItemInfo grd_ocs1003_list_item = 1;
	repeated InjsINJ1001U01DetailListItemInfo grd_detail_list_item = 2;
	repeated InjsINJ1001U01InfectionListItemInfo grd_nur1017_list_item = 3;
	repeated InjsINJ1001U01DiseaseListItemInfo grd_sang_list_item = 4;
	repeated DataStringListItemInfo grd_out0106_list_item = 5;
	repeated DataStringListItemInfo grd_nur1016_list_item = 6;
}

message INJ1001U01GridDetailSaveLayoutRequest {
	optional string user_id = 1;
	optional string upd_id = 2;
	repeated InjsINJ1001U01DetailListItemInfo item_info = 3;
}

// --- [Start] INJ0101U01 ---
 
message INJ0101U01GrdMasterRequest{

}

message INJ0101U01GrdMasterResponse{
    repeated INJ0101U01GrdMasterItemInfo grd_master_item_info = 1;
}

message INJ0101U01GrdDetailRequest{
    optional string code_type = 1;
}

message INJ0101U01GrdDetailResponse{
    repeated INJ0101U01GrdDetailItemInfo grd_detail_item_info = 1;
}

message INJ0101U01GrdMasterCheckRequest{
    optional string code_type = 1;
}

message INJ0101U01GrdDetailCheckRequest{
    optional string code_type = 1;
    optional string code = 2;
}

message INJ0101U01GrdCheckResponse{
    optional string result = 1;
}

message INJ0101U01SaveLayoutRequest{
    optional string user_id = 1;
    repeated INJ0101U01GrdMasterItemInfo grd_master_item_info = 2;
    repeated INJ0101U01GrdDetailItemInfo grd_detail_item_info = 3;
}

// --- [End] INJ0101U01 ---